@@ -2,4 +2,4 @@
 class SetupParameters():
 
     BERT_INPUT_LIMIT = 300
-    IT_MODEL = 'multilang/'
+    IT_MODEL = 'multilang_uncased/'
