@@ -1,11 +1,33 @@
 
 
 - Multilingual for NER (PER, LOC, ORG, MISC):
-$ curl -i -H "Content-Type: application/json" -X POST -d '{"strings": ["Vincenzo G. Fonzi è nato a Caserta il 13/08/1983", "Il seguente documento è firmato in calce per il signor Di Marzio.", "Conferma di avvenuto pagamento a Poste Italiane da parte del sig. Giuseppe Maria Boccardi."]}' http://localhost:5000/ner_api/v0.3/ner
-$ curl -i -H "Content-Type: application/json" -X POST -d '{"strings": ["Maria Santos è nata a Cardenas il 13/08/1983", "The following documents were signed by John Stewart at Berlin headquarters of Deutsche Bank", "Bevestiging van betaling aan ABN AMRO door dhr. Rutger Verhoeven."]}' http://localhost:5000/ner_api/v0.3/ner
-$ curl -i -H "Content-Type: application/json" -X POST -d '{"strings": ["Il sig. Francesco Antonio Di Marco lavora presso la sede centrale di Enel a Roma", "Ms. Deschamps owns a manor on the Alps in Switzerland", "David Rutte heeft twee rekeningen bij de Rabobank"]}' http://localhost:5000/ner_api/v0.3/ner
+{"strings": 
+    ["Vincenzo G. Fonzi è nato a Caserta il 13/08/1983", 
+    "Il seguente documento è firmato in calce per il signor Di Marzio.", 
+    "Conferma di avvenuto pagamento a Poste Italiane da parte del sig. Giuseppe Maria Boccardi."]
+} 
+http://localhost:5000/ner_api/v0.3/ner
+
+
+{"strings": 
+    ["Maria Santos è nata a Cardenas il 13/08/1983", 
+    "The following documents were signed by John Stewart at Berlin headquarters of Deutsche Bank", 
+    "Bevestiging van betaling aan ABN AMRO door dhr. Rutger Verhoeven."]
+}
+http://localhost:5000/ner_api/v0.3/ner
+
+
+{"strings": 
+    ["Il sig. Francesco Antonio Di Marco lavora presso la sede centrale di Enel a Roma", 
+    "Ms. Deschamps owns a manor on the Alps in Switzerland", 
+    "David Rutte heeft twee rekeningen bij de Rabobank"]
+}
+http://localhost:5000/ner_api/v0.3/ner
 
 
 - Italian for additional entities (PER, LOC, ORG, MISC, IBAN, SSID etc.):
-$ curl -i -H "Content-Type: application/json" -X POST -d '{"strings": ["Il sig. Francesco Antonio Di Marco è nato a Milano, codice fiscale DMRFNC80E01F205B, numero di telefono +39 0865989886, email di lavoro francesco.dimarco@hotmail.com"]}' http://localhost:5000/ner_api/v0.3/ner
+{"strings": 
+    ["Il sig. Francesco Antonio Di Marco è nato a Milano, codice fiscale DMRFNC80E01F205B, numero di telefono +39 0865989886, email di lavoro francesco.dimarco@hotmail.com, DMRGZC54E90F205E"]
+} 
+http://localhost:5000/ner_api/v0.3/ner
 
