@@ -39,7 +39,7 @@ class NERSeparatePunctuations(NERPreprocessing):
         self.puncts = string.punctuation
 
 
-    def preprocess(self, strings):
+    def preprocess(self, strings, do_lower_case=False):
         """Insert whitespaces around punctuations to separate them from words. Ex. "L'America" becomes "L ' America".
 
         Arguments:
@@ -67,23 +67,24 @@ class NERSeparatePunctuations(NERPreprocessing):
                         curr_changes.append(len(proc_string)-1)
                     add_ws = True
                 proc_string += ch
+            if do_lower_case:
+                proc_string = proc_string.lower()
             proc_strings.append(proc_string)
             self.changes.append(curr_changes)
         return proc_strings
 
 
-    def adjustEntitiesOffset(self, entities):
+    def adjustEntitiesOffset(self, entities, adjust_case=False):
         """Readjust the entities offset due to preprocessing of the original strings
 
         Arguments:
             entities {list} -- List of entities, ordered by the original strings indexes, for each string having the format [{["offset": ]}]
+            adjust_case {boolean} -- if True, the value of each entity is copied from the span in the original string (to avoid case mismatch)
         """
 
         assert len(entities) == len(self.original)
 
         for s, e_list, c_list in zip(self.original, entities, self.changes):
-            #if 'Conferma' in s:
-                #pdb.set_trace()
             for e in e_list:
                 curr_count = 0
                 for c in c_list:
@@ -91,3 +92,15 @@ class NERSeparatePunctuations(NERPreprocessing):
                     if e['offset'] >= c:
                         curr_count += 1
                 e['offset'] -= curr_count
+
+
+            if adjust_case:
+                # copy the entities values from the original string
+                for s, e_list in zip(self.original, entities):
+                    for e in e_list:
+                        start_pos = e['offset']
+                        end_pos = start_pos + len(e['value'])
+                        e['value'] = s[start_pos:end_pos]
+                        # clean possible white spaces (unlikely to happen)
+                        if e['value'][-1] == ' ':
+                            e['value'] = e['value'][:-1]
